Añado todas las modificaciones cambiando tildes

--- a/lp01.md
+++ b/lp01.md
@@ -1,6 +1,6 @@
 #Larry Plotter y el Bucle Filosofal
 
-El niño huerfano **Larry** vive con su tíos, que lo tratan muy mal
+El ningo huerfano **Larry** vive con su tios, que lo tratan muy mal
 (Le hacen usar *Internet Explorer*).
 
 Tiene unas *Google Glass* redondas y una cicatriz de un *USB* en la frente.
