--- a/lp02.md
+++ b/lp02.md
@@ -1,4 +1,4 @@
 #Larry Ploter y la Clave secreta del Wifi
 
 Desde que en *Matrix* hubo un bug, la escuela se encuentra asediada por un
-virus contra el que **Larry** y sus amigos deberían de luchar.
+virus contra el que **Larry** y sus amigos deberian de luchar.
