Finalizo resumen del primer libro

--- a/lp01.md
+++ b/lp01.md
@@ -4,3 +4,6 @@ El ningo huerfano **Larry** vive con su tios, que lo tratan muy mal
 (Le hacen usar *Internet Explorer*).
 
 Tiene unas *Google Glass* redondas y una cicatriz de un *USB* en la frente.
+
+Un dia aparece **Neo**, el de *Matrix*, y le dice que tambien puede ser un hacker.
+Asi que lo saca de *Matrix* y le lleva a una escuela de hacking.
