Completo el resumen del libro 2

--- a/lp02.md
+++ b/lp02.md
@@ -2,3 +2,5 @@
 
 Desde que en *Matrix* hubo un bug, la escuela se encuentra asediada por un
 virus contra el que **Larry** y sus amigos deberian de luchar.
+
+Como el malvado hacker valdemort le metio un troyano en su propio codigo
